[gd_scene load_steps=15 format=3 uid="uid://6vkc4odul5el"]

[ext_resource type="Texture2D" uid="uid://c72wckv4l4kdp" path="res://Assets/Character/Char1.png" id="1_fp685"]
[ext_resource type="Script" uid="uid://bjihja7n227m5" path="res://Scripts/customer.gd" id="1_qf3me"]
[ext_resource type="PackedScene" uid="uid://dl3a1wm0ondxa" path="res://Scenes/order_label.tscn" id="2_7c3kf"]
[ext_resource type="Script" uid="uid://buhhxipl6f5ic" path="res://Scripts/patience_bar.gd" id="3_0v30w"]
[ext_resource type="Script" uid="uid://bkvwqkcwl0bxm" path="res://Scripts/customer_animation.gd" id="5_vkxjs"]
[ext_resource type="Texture2D" uid="uid://5q0tjb8478vs" path="res://Assets/Object/Coin-50x50.png" id="6_fhub2"]
[ext_resource type="AudioStream" uid="uid://dmifxcl1vcdg7" path="res://Assets/Sounds/beads few dropped into sack 33.wav" id="7_sfx_patience"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7c3kf"]
bg_color = Color(0.226707, 0.226708, 0.226707, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0v30w"]
bg_color = Color(0.266667, 0.686275, 0.443137, 0.984314)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Animation" id="Animation_vkxjs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CustomerSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_qf3me"]
resource_name = "idle"
length = 2.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CustomerSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 0.95), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_fhub2"]
resource_name = "walk"
length = 0.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CustomerSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 0.95), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fhub2"]
_data = {
&"RESET": SubResource("Animation_vkxjs"),
&"idle": SubResource("Animation_qf3me"),
&"walk": SubResource("Animation_fhub2")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2o0mk"]
particle_flag_disable_z = true
direction = Vector3(0, 200, 0)
spread = 180.0
initial_velocity_min = 250.0
initial_velocity_max = 450.0
gravity = Vector3(0, 900, 0)

[node name="Customer" type="Node2D"]
scale = Vector2(0.6, 0.6)
script = ExtResource("1_qf3me")
walk_duration = 3.0

[node name="CustomerSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_fp685")

[node name="OrderLabel" parent="." instance=ExtResource("2_7c3kf")]
position = Vector2(281, -607)
scale = Vector2(0.5, 0.5)

[node name="PatienceBar" type="ProgressBar" parent="OrderLabel"]
offset_left = 288.0
offset_top = 242.0
offset_right = 531.0
offset_bottom = 269.0
rotation = -1.5708
scale = Vector2(2, 2)
theme_override_styles/background = SubResource("StyleBoxFlat_7c3kf")
theme_override_styles/fill = SubResource("StyleBoxFlat_0v30w")
value = 68.76
show_percentage = false
script = ExtResource("3_0v30w")
metadata/_edit_use_anchors_ = true

[node name="CustomerAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fhub2")
}
script = ExtResource("5_vkxjs")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(0, -475)
emitting = false
amount = 10
texture = ExtResource("6_fhub2")
lifetime = 1.5
one_shot = true
preprocess = 0.1
explosiveness = 0.9
randomness = 1.0
fixed_fps = 60
visibility_rect = Rect2(-256, -256, 512, 512)
process_material = SubResource("ParticleProcessMaterial_2o0mk")

[node name="SFX_Patience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_sfx_patience")
volume_db = 5.0
bus = &"SFX"
